--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ plugins:
 
 nav:
   - Home: index.md
+  - Getting started: getting_started.md
   - Tasks: 
     - User information: tasks/user.md
     - Convert raw data: tasks/convert.md
