--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ mkdocs
 mkdocs-material
 mkdocs-autorefs
 mkdocs-minify-plugin
-markdown-changelog
 mkdocs-glightbox
+mkdocs-exclude
+markdown-changelog
 pillow
 optimize-images
